--- a/styles/offers.css
+++ b/styles/offers.css
@@ -1,7 +1,7 @@
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 .offers__container {
   position: relative;
